Added icons in the what-we-do block

--- a/index.html
+++ b/index.html
@@ -74,27 +74,27 @@
         <h2 class="what-we-do__header">Что мы делаем?</h2>
         <dl class="what-we-do__desc-list">
           <div class="what-we-do__desc-item">
-            <dt class="what-we-do__desc-term">Мобильные приложения</dt>
+            <dt class="what-we-do__desc-term what-we-do__desc-term_type_mobile">Мобильные приложения</dt>
             <dl class="what-we-do__desc-def">Разработка мобильных приложений с хорошим UX/UI. Предлагаем как кроссплатформенные, так и платформазависимые решения</dl>
           </div>
           <div class="what-we-do__desc-item">
-            <dt class="what-we-do__desc-term">Веб-приложения</dt>
+            <dt class="what-we-do__desc-term what-we-do__desc-term_type_web">Веб-приложения</dt>
             <dl class="what-we-do__desc-def">Создание многофункциональных веб-сервисов под ключ. Простая интеграция в ваш бизнес с использованием современных технологий</dl>
           </div>
           <div class="what-we-do__desc-item">
-            <dt class="what-we-do__desc-term">Блокчейн-проекты</dt>
+            <dt class="what-we-do__desc-term what-we-do__desc-term_type_blockchain">Блокчейн-проекты</dt>
             <dl class="what-we-do__desc-def">Смарт-контракты, кошельки и любые разработки связанные с цифровыми активами</dl>
           </div>
           <div class="what-we-do__desc-item">
-            <dt class="what-we-do__desc-term">Машинное обучение</dt>
+            <dt class="what-we-do__desc-term what-we-do__desc-term_type_machine-learning">Машинное обучение</dt>
             <dl class="what-we-do__desc-def">Машинное обучение и нейронные сети, а также их интеграции в ваш бизнес</dl>
           </div>
           <div class="what-we-do__desc-item">
-            <dt class="what-we-do__desc-term">Дизайн</dt>
+            <dt class="what-we-do__desc-term what-we-do__desc-term_type_design">Дизайн</dt>
             <dl class="what-we-do__desc-def">Создание типографики. Применение правил композиции, создание паттернов. Разработка прототипов, UI-Kit</dl>
           </div>
           <div class="what-we-do__desc-item">
-            <dt class="what-we-do__desc-term">Разработка UX</dt>
+            <dt class="what-we-do__desc-term what-we-do__desc-term_type_ux">Разработка UX</dt>
             <dl class="what-we-do__desc-def">Проводим глубинные интервью, юзабилити-тестирования, опросы, и дневниковые исследования. Составление CJM и Service Blueprint</dl>
           </div>
         </dl>
