Header links height increased

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <section class="projects" id="projects">
       
     </section>
-    <section class="achivments" id="achivments">
+    <section class="achievements" id="achievements">
 
     </section>
     <section class="contacts" id="contacts">
