--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a class="header__link" href="#projects">Проекты</a>
         </li>
         <li class="header__list-item">
-          <a class="header__link" href="#achivments">Достижения</a>
+          <a class="header__link" href="#achievements">Достижения</a>
         </li>
         <li class="header__list-item">
           <a class="header__link" href="#contacts">Контакты</a>
