what-we-do dd in dl fix

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </svg>
               <span class="what-we-do__desc-term-text">Мобильные приложения</span>
             </dt>
-            <dl class="what-we-do__desc-def">Разработка мобильных приложений с хорошим UX/UI. Предлагаем как кроссплатформенные, так и платформазависимые решения</dl>
+            <dd class="what-we-do__desc-def">Разработка мобильных приложений с хорошим UX/UI. Предлагаем как кроссплатформенные, так и платформазависимые решения</dd>
           </div>
           <div class="what-we-do__desc-item">
             <dt class="what-we-do__desc-term">
@@ -93,7 +93,7 @@
               </svg>
               <span class="what-we-do__desc-term-text">Веб-приложения</span>
             </dt>
-            <dl class="what-we-do__desc-def">Создание многофункциональных веб-сервисов под ключ. Простая интеграция в ваш бизнес с использованием современных технологий</dl>
+            <dd class="what-we-do__desc-def">Создание многофункциональных веб-сервисов под ключ. Простая интеграция в ваш бизнес с использованием современных технологий</dd>
           </div>
           <div class="what-we-do__desc-item">
             <dt class="what-we-do__desc-term">
@@ -102,7 +102,7 @@
               </svg>
               <span class="what-we-do__desc-term-text">Блокчейн-проекты</span>
             </dt>
-            <dl class="what-we-do__desc-def">Смарт-контракты, кошельки и любые разработки связанные с цифровыми активами</dl>
+            <dd class="what-we-do__desc-def">Смарт-контракты, кошельки и любые разработки связанные с цифровыми активами</dd>
           </div>
           <div class="what-we-do__desc-item">
             <dt class="what-we-do__desc-term">
@@ -111,7 +111,7 @@
               </svg>
               <span class="what-we-do__desc-term-text">Машинное обучение</span>
             </dt>
-            <dl class="what-we-do__desc-def">Машинное обучение и нейронные сети, а также их интеграции в ваш бизнес</dl>
+            <dd class="what-we-do__desc-def">Машинное обучение и нейронные сети, а также их интеграции в ваш бизнес</dd>
           </div>
           <div class="what-we-do__desc-item">
             <dt class="what-we-do__desc-term">
@@ -120,7 +120,7 @@
               </svg>
               <span class="what-we-do__desc-term-text">Дизайн</span>
             </dt>
-            <dl class="what-we-do__desc-def">Создание типографики. Применение правил композиции, создание паттернов. Разработка прототипов, UI-Kit</dl>
+            <dd class="what-we-do__desc-def">Создание типографики. Применение правил композиции, создание паттернов. Разработка прототипов, UI-Kit</dd>
           </div>
           <div class="what-we-do__desc-item">
             <dt class="what-we-do__desc-term">
@@ -129,7 +129,7 @@
               </svg>
               <span class="what-we-do__desc-term-text">Разработка UX</span>
             </dt>
-            <dl class="what-we-do__desc-def">Проводим глубинные интервью, юзабилити-тестирования, опросы, и дневниковые исследования. Составление CJM и Service Blueprint</dl>
+            <dd class="what-we-do__desc-def">Проводим глубинные интервью, юзабилити-тестирования, опросы, и дневниковые исследования. Составление CJM и Service Blueprint</dd>
           </div>
         </dl>
       </div>
