Added project.json + small focus buttons changes

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
       </div>
       <img class="what-we-do__image" src="./img/what-we-do.jpg" alt="">
     </section>
-    <section class="projects" id="projects">
-      
+    <section class="projects max-width-1120 header-fix" id="projects">
+      <h2 class="projects__header">Наши проекты</h2>
     </section>
     <section class="achievements" id="achievements">
 
