--- a/index.html
+++ b/index.html
@@ -66,10 +66,7 @@
             <h1 class="hero__logo-header">Origin Dev</h1>
           </div>
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
-          <a class="hero__button button" href="#contacts">
-            <span class="button__shadow"></span>
-            <span class="button__body">Связаться</span>
-          </a>
+          <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
       </div>
     </section>
@@ -137,6 +134,19 @@
     </section>
     <section class="projects max-width-1120 header-fix" id="projects">
       <h2 class="projects__header">Наши проекты</h2>
+      <div class="projects__content">
+        <template>
+          <div class="projects__card project-card">
+            <img class="project-card__image" src="" alt="">
+            <h3 class="project-card__title"></h3>
+            <p class="project-card__description"></p>
+            <a class="project-card__button button" href="#">Подробнее</a>
+          </div>
+        </template>
+      </div>
+      <div class="projects__more">
+        <a href="#" class="projects__more-link">Больше работ</a>
+      </div>
     </section>
     <section class="achievements" id="achievements">
 
