--- a/index.html
+++ b/index.html
@@ -148,8 +148,13 @@
         <a href="#" class="projects__more-link">Больше работ</a>
       </div>
     </section>
-    <section class="achievements" id="achievements">
-
+    <section class="header-fix" id="achievements">
+      <div class="achievements">
+        <div class="achievements__inner max-width-1120">
+          <h2 class="achievements__header">Наши достижения</h2>
+          <div class="achievements__slider"></div>
+        </div>
+      </div>
     </section>
     <section class="contacts" id="contacts">
 
@@ -162,6 +167,7 @@
     </svg>
   </a>
 
+  <div class="test"></div>
 
   <!-------------------------- Scripts -------------------------->
   <script src="js/main.js"></script>
