Header visual fixes

--- a/index.html
+++ b/index.html
@@ -152,7 +152,16 @@
       <div class="achievements">
         <div class="achievements__inner max-width-1120">
           <h2 class="achievements__header">Наши достижения</h2>
-          <div class="achievements__slider"></div>
+          <div class="achievements__slider">
+            <div class="achievements__slider-inner">
+              <div class="achievements__card">
+                <h3 class="achievements__card-title">Moscow City Hack</h3>
+                <p class="achievements__card-description">Разработка iOS / Android суперприложения для платформы i.moscow</p>
+                <img class="achievements__card-image" src="" alt="">
+                <strong class="achievements__card-place">1 МЕСТО</strong>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
