hero__logo fix + achievements__slider demo

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <svg class="hero__logo-image" viewBox="0 0 563 646">
               <use xlink:href="./img/sprite.svg#logo"></use>
             </svg>
-            <h1 class="hero__logo-header">Origin Dev</h1>
+            <h1 class="hero__logo-header">Origin&nbsp;Dev</h1>
           </div>
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
@@ -157,7 +157,57 @@
               <div class="achievements__card">
                 <h3 class="achievements__card-title">Moscow City Hack</h3>
                 <p class="achievements__card-description">Разработка iOS / Android суперприложения для платформы i.moscow</p>
-                <img class="achievements__card-image" src="" alt="">
+                <div class="achievements__card-image-wrapper">
+                  <img class="achievements__card-image" src="./img/achievements__mch.svg" alt="Moscow City Hack logo" height="" width="">
+                </div>
+                <strong class="achievements__card-place">1 МЕСТО</strong>
+              </div>
+              <div class="achievements__card">
+                <h3 class="achievements__card-title">Moscow City Hack</h3>
+                <p class="achievements__card-description">Разработка iOS / Android суперприложения для платформы i.moscow</p>
+                <div class="achievements__card-image-wrapper">
+                  <img class="achievements__card-image" src="./img/achievements__mch.svg" alt="Moscow City Hack logo" height="" width="">
+                </div>
+                <strong class="achievements__card-place">1 МЕСТО</strong>
+              </div>
+              <div class="achievements__card">
+                <h3 class="achievements__card-title">Moscow City Hack</h3>
+                <p class="achievements__card-description">Разработка iOS / Android суперприложения для платформы i.moscow</p>
+                <div class="achievements__card-image-wrapper">
+                  <img class="achievements__card-image" src="./img/achievements__mch.svg" alt="Moscow City Hack logo" height="" width="">
+                </div>
+                <strong class="achievements__card-place">1 МЕСТО</strong>
+              </div>
+              <div class="achievements__card">
+                <h3 class="achievements__card-title">Moscow City Hack</h3>
+                <p class="achievements__card-description">Разработка iOS / Android суперприложения для платформы i.moscow</p>
+                <div class="achievements__card-image-wrapper">
+                  <img class="achievements__card-image" src="./img/achievements__mch.svg" alt="Moscow City Hack logo" height="" width="">
+                </div>
+                <strong class="achievements__card-place">1 МЕСТО</strong>
+              </div>
+              <div class="achievements__card">
+                <h3 class="achievements__card-title">Moscow City Hack</h3>
+                <p class="achievements__card-description">Разработка iOS / Android суперприложения для платформы i.moscow</p>
+                <div class="achievements__card-image-wrapper">
+                  <img class="achievements__card-image" src="./img/achievements__mch.svg" alt="Moscow City Hack logo" height="" width="">
+                </div>
+                <strong class="achievements__card-place">1 МЕСТО</strong>
+              </div>
+              <div class="achievements__card">
+                <h3 class="achievements__card-title">Moscow City Hack</h3>
+                <p class="achievements__card-description">Разработка iOS / Android суперприложения для платформы i.moscow</p>
+                <div class="achievements__card-image-wrapper">
+                  <img class="achievements__card-image" src="./img/achievements__mch.svg" alt="Moscow City Hack logo" height="" width="">
+                </div>
+                <strong class="achievements__card-place">1 МЕСТО</strong>
+              </div>
+              <div class="achievements__card">
+                <h3 class="achievements__card-title">Moscow City Hack</h3>
+                <p class="achievements__card-description">Разработка iOS / Android суперприложения для платформы i.moscow</p>
+                <div class="achievements__card-image-wrapper">
+                  <img class="achievements__card-image" src="./img/achievements__mch.svg" alt="Moscow City Hack logo" height="" width="">
+                </div>
                 <strong class="achievements__card-place">1 МЕСТО</strong>
               </div>
             </div>
@@ -175,8 +225,6 @@
       <use xlink:href="./img/sprite.svg#scroll-to-top"></use>
     </svg>
   </a>
-
-  <div class="test"></div>
 
   <!-------------------------- Scripts -------------------------->
   <script src="js/main.js"></script>
