--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div class="achievements">
         <div class="achievements__inner">
           <h2 class="achievements__header max-width-1120">Наши достижения</h2>
-          <div class="achievements__slider-wrapper max-width-1120">
+          <div class="achievements__slider-wrapper">
             <div class="achievements__slider glide">
               <div class="glide__track" data-glide-el="track">
                 <ul class="achievements__slider-inner glide__slides">
