--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </section>
     <section class="contacts header-fix" id="contacts">
       <h2 class="contacts__title">Связаться</h2>
-      <form class="contacts__form form" action="http://127.0.0.1:5500/#contacts" method="POST">
+      <form class="contacts__form form" action="https://formsubmit.co/ilya.iskra1337@gmail.com" method="POST">
         <input class="contacts__form-item form__name" type="text" name="name" placeholder="Ваше имя">
         <input class="contacts__form-item form__email" type="email" name="email" placeholder="Ваш email" required>
         <input class="contacts__form-item form__tel" type="tel" name="tel" placeholder="Ваш телефон" required pattern="^(\s*)?(\+)?([- _():=+]?\d[- _():=+]?){10,14}(\s*)?$">
