--- a/index.html
+++ b/index.html
@@ -250,42 +250,46 @@
 
   <footer class="footer">
     <div class="footer__content max-width-1120">
-      <a class="footer__logo-link" href="#hero">
-        <svg class="footer__logo" viewBox="0 0 563 646" width="56">
-          <use xlink:href="./img/sprite.svg#logo"></use>
-        </svg>
-        <span class="footer__logo-title">origin dev</span>
-      </a>
-      <ul class="footer__list">
-        <li class="footer__list-item">
-          <a class="footer__link" href="mailto:contact@origin-dev.tech">
-            <svg class="footer__link-icon" height="50%">
-              <use xlink:href="./img/sprite.svg#email"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="footer__list-item">
-          <a class="footer__link" href="https://t.me/semyon_dev">
-            <svg class="footer__link-icon" height="50%">
-              <use xlink:href="./img/sprite.svg#telegram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="footer__list-item">
-          <a class="footer__link" href="https://wa.me/123456890?text=%D0%9F%D1%80%D0%B8%D0%B2%D0%B5%D1%82!%20%D0%AD%D1%82%D0%BE%20%D0%BA%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D0%B0%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B8%20IT%E2%80%91%D0%BF%D1%80%D0%BE%D0%B4%D1%83%D0%BA%D1%82%D0%BE%D0%B2%20%D0%B4%D0%BB%D1%8F%20%D0%92%D0%B0%D1%88%D0%B5%D0%B3%D0%BE%20%D0%B1%D0%B8%D0%B7%D0%BD%D0%B5%D1%81%D0%B0%20Origin%20Dev!%20%D0%9E%D1%81%D1%82%D0%B0%D0%B2%D1%8C%D1%82%D0%B5%20%D0%BD%D0%B0%D0%BC%20%D1%81%D0%B2%D0%BE%D1%91%20%D1%81%D0%BE%D0%BE%D0%B1%D1%89%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%B8%20%D0%BC%D1%8B%20%D0%BE%D0%B1%D1%8F%D0%B7%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%20%D0%BD%D0%B0%20%D0%BD%D0%B5%D0%B3%D0%BE%20%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D0%B8%D0%BC!">
-            <svg class="footer__link-icon" height="50%">
-              <use xlink:href="./img/sprite.svg#whatsapp"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="footer__list-item">
-          <a class="footer__link" href="https://www.instagram.com/origin_dev/">
-            <svg class="footer__link-icon" height="50%">
-              <use xlink:href="./img/sprite.svg#instagram"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+      <div class="footer__links">
+        <a class="footer__logo-link" href="#hero">
+          <svg class="footer__logo" viewBox="0 0 563 646" width="56">
+            <use xlink:href="./img/sprite.svg#logo"></use>
+          </svg>
+          <span class="footer__logo-title">origin dev</span>
+        </a>
+        <div class="footer__list-wrapper">
+          <ul class="footer__list">
+            <li class="footer__list-item">
+              <a class="footer__link" href="mailto:contact@origin-dev.tech">
+                <svg class="footer__link-icon" height="50%">
+                  <use xlink:href="./img/sprite.svg#email"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer__list-item">
+              <a class="footer__link" href="https://t.me/semyon_dev">
+                <svg class="footer__link-icon" height="50%">
+                  <use xlink:href="./img/sprite.svg#telegram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer__list-item">
+              <a class="footer__link" href="https://wa.me/123456890?text=%D0%9F%D1%80%D0%B8%D0%B2%D0%B5%D1%82!%20%D0%AD%D1%82%D0%BE%20%D0%BA%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D0%B0%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B8%20IT%E2%80%91%D0%BF%D1%80%D0%BE%D0%B4%D1%83%D0%BA%D1%82%D0%BE%D0%B2%20%D0%B4%D0%BB%D1%8F%20%D0%92%D0%B0%D1%88%D0%B5%D0%B3%D0%BE%20%D0%B1%D0%B8%D0%B7%D0%BD%D0%B5%D1%81%D0%B0%20Origin%20Dev!%20%D0%9E%D1%81%D1%82%D0%B0%D0%B2%D1%8C%D1%82%D0%B5%20%D0%BD%D0%B0%D0%BC%20%D1%81%D0%B2%D0%BE%D1%91%20%D1%81%D0%BE%D0%BE%D0%B1%D1%89%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%B8%20%D0%BC%D1%8B%20%D0%BE%D0%B1%D1%8F%D0%B7%D0%B0%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%20%D0%BD%D0%B0%20%D0%BD%D0%B5%D0%B3%D0%BE%20%D0%BE%D1%82%D0%B2%D0%B5%D1%82%D0%B8%D0%BC!">
+                <svg class="footer__link-icon" height="50%">
+                  <use xlink:href="./img/sprite.svg#whatsapp"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer__list-item">
+              <a class="footer__link" href="https://www.instagram.com/origin_dev/">
+                <svg class="footer__link-icon" height="50%">
+                  <use xlink:href="./img/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
       <p class="footer__copy">Origin Dev<br>2020 — 2021<br>&copy;</p>
     </div>
   </footer>
