Safari hamburger fix

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </li>
       </ul>
     </nav>
-    <button class="header__ham">
+    <div class="header__ham" role="button" tabindex="0">
       <span class="header__ham-line"></span>
       <span class="header__ham-line"></span>
       <span class="header__ham-line"></span>
